--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ web-build/
 
 # macOS
 .DS_Store
-.GoogleService-Info.plist
-.google-services.json
-.firebase.js
+/GoogleService-Info.plist
+/google-services.json
+/firebase.js
 .env
